# OS

./: .gitignore  LICENSE  QUICK_START.md  README.md  build_project.ps1  run_all.ps1  run_tests.ps1  start_all.ps1  start_backend.ps1  start_frontend.ps1  test_cpu_calculation.js
backend/: CMakeLists.txt
backend/doc/: API.md  API_Integration_Tests.md  test_clock_manager.md  test_device_manager.md  test_fs_manager.md  test_interrupt_manager.md  test_memory_manager.md  test_process_manager.md
backend/include/: common.h
backend/include/clock/: clock_manager.h
backend/include/device/: device_manager.h
backend/include/fs/: fs_manager.h  inode.h
backend/include/interrupt/: interrupt_manager.h
backend/include/memory/: memory_manager.h
backend/include/process/: pcb.h  process_manager.h
backend/src/clock/: clock_manager.cpp
backend/src/core/: main.cpp
backend/src/device/: device_manager.cpp
backend/src/fs/: fs_manager.cpp
backend/src/interrupt/: interrupt_manager.cpp
backend/src/memory/: memory_manager.cpp
backend/src/process/: pcb.cpp  process_manager.cpp
backend/tests/: api_tests.cpp  clock_api_test.cpp  device_api_test.cpp  filesystem_api_test.cpp  interrupt_api_test.cpp  ipc_api_test.cpp  main_test.cpp  memory_api_test.cpp  process_api_test.cpp  relationship_api_test.cpp  scheduler_api_test.cpp  sync_api_test.cpp  test_clock_manager.cpp  test_common.h  test_device_manager.cpp  test_fs_manager.cpp  test_helpers.cpp  test_interrupt_manager.cpp  test_memory_manager.cpp  test_process_manager.cpp  unit_test_main.cpp
frontend/: README.md  UPDATE_SUMMARY.md  env.d.ts  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: AppWindow.vue  BootLoader.vue  DesktopIcon.vue  TheDesktop.vue  TheTaskbar.vue
frontend/src/components/apps/: DeviceManager.vue  FileAddressViewer.vue  FileManager.vue  FileSystemConfig.vue  MemoryManager.vue  MusicPlayer.vue  ProcessManager.vue  SystemControl.vue  Terminal.vue
frontend/src/components/dialogs/: InputDialog.vue  MessageDialog.vue  PropertiesDialog.vue
frontend/src/composables/: useDialogs.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts  healthCheck.ts
frontend/src/stores/: windows.ts
